new process section

--- a/scss/layout/_header1.scss
+++ b/scss/layout/_header1.scss
@@ -316,12 +316,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-
-        img {
-          width: 1.2rem;
-          position: absolute;
-          right: 0.5rem;
-        }
+        font-size: .8em;
       }
     }
   }
