--- a/scss/layout/_footer1.scss
+++ b/scss/layout/_footer1.scss
@@ -98,7 +98,7 @@
             &>div {
               width: 2rem;
               height: 2rem;
-              background-color: white;
+              background-color: #222;
               border-radius: 50%;
               margin-right: 0.5rem;
               display: flex;
