--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -5,7 +5,7 @@
 
         .container {
             width: 100%;
-            max-width: 1000px;
+            max-width: 1200px;
             margin: auto;
             display: flex;
             flex-direction: column;
@@ -116,6 +116,81 @@
         }
     }
 
+    #process {
+        padding: 4em 1em;
+        width: 100vw;
+
+        .heading {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+            margin-bottom: 3em;
+
+            h2 {
+                font-size: 2em;
+            }
+
+            span {
+                // font-size: .8em;
+                color: var(--main-primary-color);
+            }
+        }
+
+        .container {
+            width: 100%;
+            max-width: 1200px;
+            margin: auto;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-gap: 2em;
+
+            .item {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+
+                .num {
+                    border: 4px solid var(--main-primary-color);
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 70%;
+                    height: 10em;
+                    margin-bottom: 1em;
+                    border-radius: 5px;
+                    position: relative;
+
+                    &::before {
+                        width: 2.5em;
+                        height: 2.5em;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        background-color: var(--main-primary-color);
+                        border-radius: 50%;
+                        position: absolute;
+                        content: attr(data-num);
+                        right: -1.3em;
+                        top: 25%;
+                        color: white;
+                        font-size: 1.5em;
+                    }
+                    img {
+                        width: 3em;
+                        height: 3em;
+                    }
+                }
+                .text {
+                    h3 {
+                        font-size: 1.2em;
+                        margin-bottom: .5em;
+                    }
+                }
+            }
+        }
+    }
 
 }
 
@@ -129,6 +204,12 @@
                 width: 100%;
                 margin-left: 1em;
             }
+        }
+    }
+    #process {
+        .container {
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
         }
     }
 }
@@ -179,7 +260,12 @@
             }
         }
     }
-
+    #process {
+        .container {
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: 1fr;
+        }
+    }
 }
 
 @media(min-width: 1024px) {
