--- a/scss/main.css
+++ b/scss/main.css
@@ -2119,6 +2119,7 @@ body {
     width: 100%;
     border-radius: .5em;
     text-transform: uppercase;
+    font-size: 16px;
   }
   #contact .container .info-container {
     width: 100%;
