--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -124,6 +124,7 @@
                         width: 100%;
                         border-radius: .5em;
                         text-transform: uppercase;
+                        font-size: 16px;
                     }
                 }
             }
