--- a/scss/critical.css
+++ b/scss/critical.css
@@ -77,10 +77,82 @@
     font-size: 1em;
     background-color: transparent;
     color: white;
+    overflow: hidden;
+    -webkit-transition: all .5s;
+    transition: all .5s;
+  }
+  #landing .content .btns a:nth-child(1)::before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: var(--main-primary-color);
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-transition: all .8s;
+    transition: all .8s;
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+    z-index: -1;
+  }
+  #landing .content .btns a:nth-child(1):hover {
+    -webkit-transition: border .8s;
+    transition: border .8s;
+    border: 2px solid var(--main-primary-color);
+  }
+  #landing .content .btns a:nth-child(1):hover::before {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
   }
   #landing .content .btns a:nth-child(2) {
-    background-color: white;
     color: var(--main-primary-color);
+    position: relative;
+    overflow: hidden;
+    color: white;
+    background-color: transparent;
+    -webkit-transition: all .8s;
+    transition: all .8s;
+  }
+  #landing .content .btns a:nth-child(2)::before {
+    content: '';
+    background-color: var(--main-primary-color);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  #landing .content .btns a:nth-child(2)::after {
+    -webkit-transition: all .8s;
+    transition: all .8s;
+    content: '';
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0%;
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+    z-index: -1;
+  }
+  #landing .content .btns a:nth-child(2):hover {
+    -webkit-transition: color .8s .2s ease-in-out;
+    transition: color .8s .2s ease-in-out;
+    color: black;
+  }
+  #landing .content .btns a:nth-child(2):hover::before {
+    -webkit-transition: all .8s;
+    transition: all .8s;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+  }
+  #landing .content .btns a:nth-child(2):hover::after {
+    -webkit-transition: all .8s;
+    transition: all .8s;
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
   }
   #landing picture {
     position: absolute;
