--- a/scss/critical.scss
+++ b/scss/critical.scss
@@ -52,11 +52,78 @@
                     font-size: 1em;
                     background-color: transparent;
                     color: white;
+                    overflow: hidden;
+                    transition: all .5s;
+                    &::before {
+                        content: '';
+                        width: 100%;
+                        height: 100%;
+                        background-color: var(--main-primary-color);
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        transition: all .8s;
+                        transform: translateX(-100%);
+                        z-index: -1;
+                    }
+                    &:hover {
+                        transition: border .8s;
+                        border: 2px solid var(--main-primary-color);
+
+                        &::before {
+                            transform: translateX(0%);
+                        }
+                    }
                 }
 
                 a:nth-child(2) {
-                    background-color: white;
+
                     color: var(--main-primary-color);
+                    position: relative;
+                    overflow: hidden;
+                    color: white;
+                    background-color: transparent;
+                    transition: all .8s;
+
+                    &::before {
+                        content: '';
+                        background-color: var(--main-primary-color);
+                        width: 100%;
+                        height: 100%;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        z-index: -1;
+                        // display: none;
+                    }
+
+                    &::after {
+                        transition: all .8s;
+                        content: '';
+                        background-color: white;
+                        width: 100%;
+                        height: 100%;
+                        position: absolute;
+                        top: 0;
+                        left: 0%;
+                        transform: translateX(-100%);
+                        z-index: -1;
+                    }
+
+                    &:hover {
+                        transition: color .8s .2s ease-in-out;
+                        color: black;
+
+                        &::before {
+                            transition: all .8s;
+                            transform: translateX(100%);
+                        }
+
+                        &::after {
+                            transition: all .8s;
+                            transform: translateX(0%)
+                        }
+                    }
                 }
             }
         }
