--- a/scss/main.css
+++ b/scss/main.css
@@ -218,6 +218,52 @@ body {
     display: none;
     -webkit-box-shadow: none;
             box-shadow: none;
+    position: relative;
+    overflow: hidden;
+    background-color: transparent;
+    -webkit-transition: all .8s;
+    transition: all .8s;
+  }
+  header nav .nav-btn::before {
+    content: '';
+    background-color: var(--main-primary-color);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  header nav .nav-btn::after {
+    -webkit-transition: all .8s;
+    transition: all .8s;
+    content: '';
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0%;
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+    z-index: -1;
+  }
+  header nav .nav-btn:hover {
+    -webkit-transition: color .8s .2s ease-in-out;
+    transition: color .8s .2s ease-in-out;
+    color: black;
+  }
+  header nav .nav-btn:hover::before {
+    -webkit-transition: all .8s;
+    transition: all .8s;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+  }
+  header nav .nav-btn:hover::after {
+    -webkit-transition: all .8s;
+    transition: all .8s;
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
   }
   header .navlinks-overlay {
     position: fixed;
@@ -769,10 +815,6 @@ body {
           box-shadow: var(--box-shadow);
 }
 
-.btn:hover {
-  opacity: .8;
-}
-
 .btn-primary {
   background-color: var(--main-primary-color);
 }
@@ -1081,9 +1123,87 @@ body {
         -ms-flex-align: center;
             align-items: center;
     font-size: 1em;
-    background-color: transparent;
-    color: var(--main-primary-color);
     margin-left: 0.5em;
+    background-color: transparent;
+    color: black;
+    overflow: hidden;
+    -webkit-transition: all .5s;
+    transition: all .5s;
+  }
+  #intro .container .content .btns a:nth-child(2)::before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: var(--main-primary-color);
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-transition: all .8s;
+    transition: all .8s;
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+    z-index: -1;
+  }
+  #intro .container .content .btns a:nth-child(2):hover {
+    -webkit-transition: all .8s;
+    transition: all .8s;
+    border: 2px solid var(--main-primary-color);
+    color: white;
+  }
+  #intro .container .content .btns a:nth-child(2):hover::before {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+  #intro .container .content .btns a:nth-child(1) {
+    color: var(--main-primary-color);
+    position: relative;
+    overflow: hidden;
+    color: white;
+    background-color: transparent;
+    -webkit-transition: all .8s;
+    transition: all .8s;
+    border: 2px solid var(--main-primary-color);
+  }
+  #intro .container .content .btns a:nth-child(1)::before {
+    content: '';
+    background-color: var(--main-primary-color);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  #intro .container .content .btns a:nth-child(1)::after {
+    -webkit-transition: all .8s;
+    transition: all .8s;
+    content: '';
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0%;
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+    z-index: -1;
+  }
+  #intro .container .content .btns a:nth-child(1):hover {
+    -webkit-transition: color .8s .1s ease-in-out;
+    transition: color .8s .1s ease-in-out;
+    color: black;
+  }
+  #intro .container .content .btns a:nth-child(1):hover::before {
+    -webkit-transition: all .8s;
+    transition: all .8s;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+  }
+  #intro .container .content .btns a:nth-child(1):hover::after {
+    -webkit-transition: all .8s;
+    transition: all .8s;
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
   }
   #home-services {
     width: 100%;
