--- a/scss/layout/_header1.scss
+++ b/scss/layout/_header1.scss
@@ -95,6 +95,7 @@
             bottom: 0;
             position: absolute;
             transform: translateX(-101%);
+            transition: all .8s;
           }
 
           &:hover {
