--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -32,6 +32,7 @@
                         top: 0;
                         left: 0;
                         object-fit: cover;
+                        box-shadow: var(--box-shadow);
                     }
 
                     &::before {
